get user from device
