# src/models/nfcDevice.model.js
@@ -14,7 +14,7 @@ NfcDevice.init({
     primaryKey: true,
     allowNull: false,
   },
-  serialNo: {
+  deviceUid: {
     type: Sequelize.STRING,
     unique: true,
   },
